--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Doggy Style Workspace</title>
 
-  <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
+<!-- HEADER -->
 <header class="topbar">
   <div class="brand">
-    <img src="assets/logo.png" class="brand__logo" alt="Doggy Style" />
-    <div>
+    <img src="assets/logo.png" class="brand__logo" alt="Doggy Style">
+    <div class="brand__text">
       <strong>Doggy Style Workspace</strong><br>
-      <small>Formularmappe · Offline · iPad-freundlich</small>
+      <small>Formularmappe · Offline</small>
     </div>
   </div>
 
@@ -27,20 +29,26 @@
   </nav>
 </header>
 
-<main>
+<!-- MAIN -->
+<main class="content">
 
+  <!-- START -->
   <section class="panel active" id="start">
     <div class="card">
       <h2>Neues Dokument</h2>
-      <p>Wähle eine Vorlage, fülle aus, unterschreibe – und speichere als PDF über „Drucken“.</p>
+      <p>
+        Vorlage auswählen, ausfüllen, unterschreiben  
+        und als PDF über <strong>„Drucken“</strong> speichern.
+      </p>
 
-      <label>Vorlage</label>
+      <label for="templateSelect">Vorlage</label>
       <select id="templateSelect"></select>
 
       <button id="btnCreateDoc">Dokument erstellen</button>
     </div>
   </section>
 
+  <!-- DOKUMENTE -->
   <section class="panel" id="documents">
     <div class="card">
       <h2>Dokumente</h2>
@@ -49,6 +57,7 @@
     </div>
   </section>
 
+  <!-- HUNDE / KUNDEN -->
   <section class="panel" id="people">
     <div class="card">
       <h2>Hunde / Kunden</h2>
@@ -56,10 +65,14 @@
     </div>
   </section>
 
+  <!-- EINSTELLUNGEN -->
   <section class="panel" id="settings">
     <div class="card">
       <h2>Einstellungen</h2>
-      <p>Alles bleibt lokal auf deinem Gerät (Offline-First).</p>
+      <p>
+        Alles bleibt lokal auf diesem Gerät gespeichert  
+        (Offline-First).
+      </p>
       <button id="btnClearAll">Alle lokalen Daten löschen</button>
     </div>
   </section>
