--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- ================= START ================= -->
     <section id="home" class="panel is-active">
       <div class="card">
-        <img src="logo.png" alt="Doggy Style Hundepension" class="hero-logo">
+<img src="assets/logo.png" alt="Doggy Style Hundepension" class="hero-logo">
       </div>
 
       <div class="card">
