--- a/index.html
+++ b/index.html
@@ -112,16 +112,12 @@
 
       <div id="formRoot"></div>
 
-      <div class="card">
-        <h2>Unterschrift</h2>
-        <p class="muted">Unterschreibe im Feld (Finger/Apple Pencil).</p>
-        <div class="sigWrap">
-          <canvas id="sigPad" width="900" height="260"></canvas>
-          <div class="row">
-            <button class="btn" id="btnSigClear">Unterschrift löschen</button>
-          </div>
-        </div>
-      </div>
+    <div class="card">
+  <h2>Unterschrift</h2>
+  <button class="btn primary" id="btnSignatureOpen">
+    ✍️ Unterschrift erfassen
+  </button>
+</div>
 
       <div class="card">
         <h2>Datenschutz (DSGVO)</h2>
