--- a/index.html
+++ b/index.html
@@ -134,5 +134,7 @@
   <script>
     if ('serviceWorker' in navigator) navigator.serviceWorker.register('sw.js');
   </script>
+<!-- Dummy für Legacy-Signatur -->
+<canvas id="sigPad" width="1" height="1" style="display:none"></canvas>
 </body>
 </html>
