--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <div class="row between">
           <div>
             <h1 id="editorTitle">Dokument</h1>
+<div id="versionBox" class="card" style="margin-top:12px"></div>
             <div class="muted" id="editorMeta"></div>
           </div>
           <div class="row">
@@ -118,6 +119,10 @@
     ✍️ Unterschrift erfassen
   </button>
 </div>
+<section class="panel">
+  <h2>Belegung (nächste 14 Tage)</h2>
+  <div id="occupancy"></div>
+</section>
 
       <div class="card">
         <h2>Datenschutz (DSGVO)</h2>
