--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Doggy Style Workspace</title>
+<section class="panel">
+  <h2>Heute bei uns</h2>
+  <div id="todayStatus"></div>
+</section>
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#101014" />
   <link rel="apple-touch-icon" href="assets/logo.png" />
