--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     </nav>
   </header>
 
+  <main class="shell">
+
     <section class="panel is-active" id="home">
 <div class="card">
   <h2>Aktuelle Belegung (nächste 14 Tage)</h2>
