--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@
         </div>
       </div>
 
-      <div id="formRoot"></div>
+      <div id="editorContent">
+
+<div id="formRoot"></div>
+
+</div>
 
     <div class="card">
   <h2>Unterschrift</h2>
