--- a/index.html
+++ b/index.html
@@ -1,163 +1,193 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="de">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Doggy Style Workspace</title>
-
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#101014" />
-  <link rel="apple-touch-icon" href="assets/logo.png" />
-  <link rel="stylesheet" href="styles.css" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
+<title>Doggy Style Workspace</title>
+<link href="manifest.json" rel="manifest"/>
+<meta content="#101014" name="theme-color"/>
+<link href="assets/logo.png" rel="apple-touch-icon"/>
+<link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <header class="topbar">
-    <div class="brand">
-      <img src="assets/logo.png" alt="Doggy Style" class="brand__logo" />
-      <div class="brand__text">
-        <div class="brand__title">Doggy Style Workspace</div>
-        <div class="brand__sub">Formularmappe · Offline · iPad‑freundlich</div>
-      </div>
-    </div>
-    <nav class="tabs" role="tablist">
-      <button class="tab is-active" data-tab="home">Start</button>
-      <button class="tab" data-tab="documents">Dokumente</button>
-      <button class="tab" data-tab="dogs">Hunde/Kunden</button>
-      <button class="tab" data-tab="settings">Einstellungen</button><button class="tab" data-tab="invoices">Rechnungen</button>
-    </nav>
-  </header>
-
-  <main class="shell">
-
-    <section class="panel is-active" id="home">
+<header class="topbar">
+<div class="brand">
+<img alt="Doggy Style" class="brand__logo" src="assets/logo.png"/>
+<div class="brand__text">
+<div class="brand__title">Doggy Style Workspace</div>
+<div class="brand__sub">Formularmappe · Offline · iPad‑freundlich</div>
+</div>
+</div>
+<nav class="tabs" role="tablist">
+<button class="tab is-active" data-tab="home">Start</button>
+<button class="tab" data-tab="documents">Dokumente</button>
+<button class="tab" data-tab="dogs">Hunde/Kunden</button>
+<button class="tab" data-tab="settings">Einstellungen</button><button class="tab" data-tab="invoices">Rechnungen</button>
+</nav>
+</header>
+<main class="shell">
+<section class="panel is-active" id="home">
 <div class="card">
-  <h2>Aktuelle Belegung (nächste 14 Tage)</h2>
-  <div id="occupancy"></div>
+<h2>Aktuelle Belegung (nächste 14 Tage)</h2>
+<div id="occupancy"></div>
 </div>
 <div class="card">
-  <h2>Heute bei uns</h2>
-  <div id="todayStatus"></div>
+<h2>Heute bei uns</h2>
+<div id="todayStatus"></div>
 </div>
-      <div class="card hero">
-        <h1>Neues Dokument</h1>
-        <p>Wähle eine Vorlage, fülle aus, unterschreibe – und speichere als PDF über „Drucken“.</p>
-        <div class="row">
-          <label class="field">
-            <span>Vorlage</span>
-            <select id="templateSelect"></select>
-          </label>
-          <button class="btn primary" id="btnNewDoc">Dokument erstellen</button>
+<div class="card hero">
+<h1>Neues Dokument</h1>
+<p>Wähle eine Vorlage, fülle aus, unterschreibe – und speichere als PDF über „Drucken“.</p>
+<div class="row">
+<label class="field">
+<span>Vorlage</span>
+<select id="templateSelect"></select>
+</label>
+<button class="btn primary" id="btnNewDoc">Dokument erstellen</button>
+</div>
+<div class="hint">
+<strong>Tipp:</strong> Installiere die App als PWA: In Safari <em>Teilen → Zum Home‑Bildschirm</em>.
         </div>
-        <div class="hint">
-          <strong>Tipp:</strong> Installiere die App als PWA: In Safari <em>Teilen → Zum Home‑Bildschirm</em>.
-        </div>
-      </div>
+</div>
+<div class="card">
+<h2>Zuletzt</h2>
+<div class="list" id="recentList"></div>
+</div>
+</section>
+<section class="panel" id="documents">
+<div class="card">
+<div class="row between">
+<h1>Dokumente</h1>
+<button class="btn" id="btnExportAll">Export: Backup (JSON)</button>
+</div>
+<div class="list" id="docList"></div>
+</div>
+</section>
+<section class="panel" id="dogs">
+<div class="card">
+<div class="row between">
+<h1>Hunde/Kunden</h1>
+<button class="btn primary" id="btnAddDog">Neu anlegen</button>
+</div>
+<div class="card" id="cpEditor" style="display:none; margin-top:12px;">
+<h2 id="cpEditorTitle">Kunde &amp; Hund</h2>
+<div class="row" style="flex-wrap:wrap; gap:12px;">
+<label class="field" style="min-width:260px;">
+<span><strong>Bestehenden Kunden nutzen</strong></span>
+<input id="useExistingCustomer" style="width:22px;height:22px;" type="checkbox"/>
+</label>
+<label class="field" style="min-width:260px;">
+<span>Kunde auswählen</span>
+<select id="customerSelect"></select>
+</label>
+</div>
+<div class="grid2">
+<div class="card">
+<h3>Kunde (Halter)</h3>
+<div class="row" style="flex-wrap:wrap; gap:12px;">
+<label class="field"><span>Name</span><input id="c_name" placeholder="Max Müller" type="text"/></label>
+<label class="field"><span>Telefon</span><input id="c_phone" placeholder="+49 ..." type="tel"/></label>
+<label class="field"><span>E‑Mail</span><input id="c_email" placeholder="mail@..." type="email"/></label>
+<label class="field"><span>Straße/Hausnr.</span><input id="c_street" type="text"/></label>
+<label class="field"><span>PLZ</span><input id="c_zip" type="text"/></label>
+<label class="field"><span>Ort</span><input id="c_city" type="text"/></label>
+<label class="field" style="min-width:100%;"><span>Notiz</span><textarea id="c_note" rows="2"></textarea></label>
+</div>
+</div>
+<div class="card">
+<h3>Hund</h3>
+<div class="row" style="flex-wrap:wrap; gap:12px;">
+<label class="field"><span>Name</span><input id="p_name" placeholder="Bello" type="text"/></label>
+<label class="field"><span>Rasse</span><input id="p_breed" type="text"/></label>
+<label class="field"><span>Geburtsdatum</span><input id="p_birthdate" type="date"/></label>
+<label class="field"><span>Chip vorhanden</span><input id="p_chip" style="width:22px;height:22px;" type="checkbox"/></label>
+<label class="field"><span>Chipnummer</span><input id="p_chipNumber" type="text"/></label>
+<label class="field" style="min-width:100%;"><span>Notiz</span><textarea id="p_note" rows="2"></textarea></label>
+</div>
+</div>
+</div>
+<div class="row" style="gap:10px; margin-top:10px;">
+<button class="btn primary" id="btnCpSave">Speichern</button>
+<button class="btn" id="btnCpCancel">Abbrechen</button>
+</div>
+<div class="hint" id="cpHint" style="margin-top:10px;"></div>
+</div>
 
-      <div class="card">
-        <h2>Zuletzt</h2>
-        <div id="recentList" class="list"></div>
-      </div>
-    </section>
-
-    <section class="panel" id="documents">
-      <div class="card">
-        <div class="row between">
-          <h1>Dokumente</h1>
-          <button class="btn" id="btnExportAll">Export: Backup (JSON)</button>
-        </div>
-        <div id="docList" class="list"></div>
-      </div>
-    </section>
-
-    <section class="panel" id="dogs">
-      <div class="card">
-        <div class="row between">
-          <h1>Hunde/Kunden</h1>
-          <button class="btn primary" id="btnAddDog">Neu anlegen</button>
-        </div>
-        <div id="dogList" class="list"></div>
-      </div>
-    </section>
-
-    <section class="panel" id="settings">
-      <div class="card">
-        <h1>Einstellungen</h1>
-        <p>Alles bleibt lokal auf deinem Gerät (Offline‑First).</p>
-        <div class="row">
-          <button class="btn danger" id="btnWipe">Alle lokalen Daten löschen</button>
-        </div>
-        <div class="hint">
+<div class="list" id="dogList"></div>
+</div>
+</section>
+<section class="panel" id="settings">
+<div class="card">
+<h1>Einstellungen</h1>
+<p>Alles bleibt lokal auf deinem Gerät (Offline‑First).</p>
+<div class="row">
+<button class="btn danger" id="btnWipe">Alle lokalen Daten löschen</button>
+</div>
+<div class="hint">
           PDFs archivierst du am besten in <strong>Dateien</strong> in einem Ordner z. B. <em>DoggyStyle/Docs</em>.
         </div>
-      </div>
-    </section>
+</div>
+</section>
 <section class="panel" id="invoices">
-  <h2>Rechnungen</h2>
+<h2>Rechnungen</h2>
 <div id="invoiceList"></div>
 <div id="invoiceView"></div>
 </section>
-
-    <section class="panel" id="editor">
-      <div class="card sticky">
-        <div class="row between">
-          <div>
-            <h1 id="editorTitle">Dokument</h1>
-<div id="versionBox" class="card" style="margin-top:12px"></div>
-            <div class="muted" id="editorMeta"></div>
-          </div>
-          <div class="row">
-            <button class="btn" id="btnSave">Speichern</button>
-<button id="btnCreateInvoice" class="btn secondary">
+<section class="panel" id="editor">
+<div class="card sticky">
+<div class="row between">
+<div>
+<h1 id="editorTitle">Dokument</h1>
+<div class="card" id="versionBox" style="margin-top:12px"></div>
+<div class="muted" id="editorMeta"></div>
+</div>
+<div class="row">
+<button class="btn" id="btnSave">Speichern</button>
+<button class="btn secondary" id="btnCreateInvoice">
   🧾 Rechnung erstellen
 </button>
-            <button class="btn" id="btnPrint">Als PDF speichern (Drucken)</button>
-            <button class="btn" id="btnClose">Schließen</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="row">
-          <label class="field">
-            <span>Kunde/Halter</span>
-            <select id="dogSelect"></select>
-          </label>
-          <label class="field">
-            <span>Dokument‑Name</span>
-            <input id="docName" type="text" placeholder="z.B. Hundeannahme_Müller_Bello" />
-          </label>
-        </div>
-      </div>
-
-      <div id="editorContent">
-
-<div id="formRoot"></div>
-
+<button class="btn" id="btnPrint">Als PDF speichern (Drucken)</button>
+<button class="btn" id="btnClose">Schließen</button>
 </div>
-
-    <div class="card">
-  <h2>Unterschrift</h2>
-  <button class="btn primary" id="btnSignatureOpen">
+</div>
+</div>
+<div class="card">
+<div class="row">
+<label class="field">
+<span>Hund auswählen</span>
+<select id="dogSelect"></select>
+<small class="muted" id="customerInfo" style="display:block;margin-top:6px"></small>
+</label>
+<label class="field">
+<span>Dokument‑Name</span>
+<input id="docName" placeholder="z.B. Hundeannahme_Müller_Bello" type="text"/>
+</label>
+</div>
+</div>
+<div id="editorContent">
+<div id="formRoot"></div>
+</div>
+<div class="card">
+<h2>Unterschrift</h2>
+<button class="btn primary" id="btnSignatureOpen">
     ✍️ Unterschrift erfassen
   </button>
 </div>
-
-      <div class="card">
-        <h2>Datenschutz (DSGVO)</h2>
-        <p id="dsGvoText" class="muted"></p>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <span>© Doggy Style Workspace · Offline‑PWA</span>
-  </footer>
-
-  <script src="app.js"></script>
-  <script>
+<div class="card">
+<h2>Datenschutz (DSGVO)</h2>
+<p class="muted" id="dsGvoText"></p>
+</div>
+</section>
+</main>
+<footer class="footer">
+<span>© Doggy Style Workspace · Offline‑PWA</span>
+</footer>
+<script src="app.js"></script>
+<script>
     if ('serviceWorker' in navigator) navigator.serviceWorker.register('sw.js');
   </script>
 <!-- Dummy für Legacy-Signatur -->
-<canvas id="sigPad" width="1" height="1" style="display:none"></canvas>
+<canvas height="1" id="sigPad" style="display:none" width="1"></canvas>
 </body>
 </html>
