--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 <nav class="tabs" role="tablist">
 <button class="tab is-active" data-tab="home">Start</button>
-<button class="tab" data-tab="documents">Dokumente</button>
+<button class="tab" data-tab="documents">Aufenthalte</button>
 <button class="tab" data-tab="dogs">Hunde/Kunden</button>
 <button class="tab" data-tab="settings">Einstellungen</button><button class="tab" data-tab="invoices">Rechnungen</button>
 </nav>
@@ -37,14 +37,14 @@
 <div id="todayStatus"></div>
 </div>
 <div class="card hero">
-<h1>Neues Dokument</h1>
+<h1>Neuer Aufenthalt</h1>
 <p>Wähle eine Vorlage, fülle aus, unterschreibe – und speichere als PDF über „Drucken“.</p>
 <div class="row">
 <label class="field">
 <span>Vorlage</span>
 <select id="templateSelect"></select>
 </label>
-<button class="btn primary" id="btnNewDoc">Dokument erstellen</button>
+<button class="btn primary" id="btnNewDoc">Aufenthalt erstellen</button>
 </div>
 <div class="hint">
 <strong>Tipp:</strong> Installiere die App als PWA: In Safari <em>Teilen → Zum Home‑Bildschirm</em>.
@@ -58,7 +58,7 @@
 <section class="panel" id="documents">
 <div class="card">
 <div class="row between">
-<h1>Dokumente</h1>
+<h1>Aufenthalte</h1>
 <button class="btn" id="btnExportAll">Export: Backup (JSON)</button>
 </div>
 <div class="list" id="docList"></div>
