--- a/index.html
+++ b/index.html
@@ -241,6 +241,39 @@
 <footer class="footer">
 <span>© Doggy Style Workspace · Offline‑PWA</span>
 </footer>
+<!-- Auth Gate (Weg 2B: Cloud-Sync + Rollen) -->
+<div id="authGate" class="authgate" style="display:none">
+  <div class="authgate__card">
+    <h1>Anmelden</h1>
+    <p class="muted" style="margin-top:6px">Damit alle Geräte den gleichen Stand haben, melde dich an.</p>
+    <div class="row" style="flex-wrap:wrap; gap:12px; margin-top:14px">
+      <label class="field" style="min-width:260px">
+        <span>E‑Mail</span>
+        <input id="loginEmail" type="email" autocomplete="username" placeholder="name@domain.de" />
+      </label>
+      <label class="field" style="min-width:260px">
+        <span>Passwort</span>
+        <input id="loginPass" type="password" autocomplete="current-password" />
+      </label>
+    </div>
+    <div class="row" style="gap:10px; margin-top:10px; flex-wrap:wrap">
+      <button class="btn primary" id="btnLogin">Anmelden</button>
+      <button class="btn" id="btnRegister">Registrieren</button>
+      <button class="btn" id="btnLogout" style="display:none">Abmelden</button>
+    </div>
+    <div class="hint" style="margin-top:12px">
+      <strong>Hinweis:</strong> FaceID/TouchID geht über <em>Passkeys</em>. Das schalten wir nach dem Grund-Login frei.
+    </div>
+    <div class="muted" id="authMsg" style="margin-top:10px"></div>
+  </div>
+</div>
+
+<!-- Firebase (optional) + Config -->
+<script src="firebase-config.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore-compat.js"></script>
+
 <script src="app.js"></script>
 <script>
     if ('serviceWorker' in navigator) navigator.serviceWorker.register('sw.js');
